@@ -80,7 +80,7 @@ Pavley, John (http://www.pavley.com/)
 Payne, Robert (http://zwopple.com)
 Pritchard, Jason
 Razma, Rolandas
-Revolti, James
+Revolti, James (http://www.novasoftware.com.br/)
 Rios, Conlan (http://www.conlanrios.com)
 Rix, Matt (http://twitter.com/MattRix)
 Roach, David (http://www.creativeclasssoftware.com)
