@@ -6,6 +6,7 @@ version 1.0-beta - XX-XXX-2011
 . [FIX] Sprite: flipx/flipy don't modify the contentSize (issue #1073)
 . [FIX] SpriteFrame: setRect sets pixels too. setRectInPixels sets points too (issue #1088)
 . [FIX] Templates: ItunesArtwork renamed to iTunesArtwork (issue #1092)
+. [FIX] TiledMap: TMX maps work with zlib compression (Tiled v0.6)
 . [FIX-MAC] EventDispatcher: flagsChanged is triggered correctly (issue #1066)
 . [FIX-MAC] EventDispatcher: queue & dispatch events are synced (issue #1083)
 . [FIX-MAC] LabelTTF: alignment works OK (issue #1073)
